--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmldom-xplat",
-  "description": "W3C XML DOM for all common Javascript platforms",
+  "description": "W3C XML DOM that works on all common Javascript platforms ",
   "author": {
     "name": "The National Library of Finland"
   },
